littke changes to index and init a skill tree

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -84,7 +84,7 @@
       <article>
         <section id="s2" class="txt-section">
           <div class="skill-col">
-            <h2>Technical Skills</h2>
+            <h2>Key Skills</h2>
             <div class="skill-container">
               <ul>
                 <li>Languages</li>
@@ -92,12 +92,9 @@
               <blockquote>
                 <ul>
                   <li>C++</li>
-                  <li>C#</li>
                   <li>Javascript</li>
-                  <li>Python</li>
                   <li>HTML/CSS</li>
                   <li>Luau</li>
-                  <li>SQL</li>
                 </ul>
               </blockquote>
 
@@ -120,9 +117,8 @@
                 </summary>
                 <blockquote>
                   <ul>
-                    <li>Git</li>
-                    <li>Unity</li>
-                    <li>Hugging Face Gradio</li>
+                    <li>SQL</li>
+                    <li>Hugging Face</li>
                     <li>Roblox Game Development</li>
                   </ul>
                 </blockquote>
